BILNA-407 #fix desc on mobile

--- a/skin/frontend/base/default/css/pdp.css
+++ b/skin/frontend/base/default/css/pdp.css
@@ -796,6 +796,13 @@ margin: 0 1% ;
 .product-tab-mobile-wrapper .tab-container {
     margin: 0 15px;
 }
+
+.product-tab-mobile-wrapper .colomn{
+	width:auto;
+}
+.product-tab-mobile-wrapper #show{
+	display:none;
+}
 #customer-reviews {
 	margin-bottom: 50px;
 	clear: both;
